--- a/Resources/Base.lproj/DocumentationBrowser.xib
+++ b/Resources/Base.lproj/DocumentationBrowser.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14269.14" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14269.14"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BXDocumentationBrowser">
@@ -30,7 +31,6 @@
                             <collectionView focusRingType="none" selectable="YES" allowsMultipleSelection="YES" maxNumberOfColumns="4" id="12" customClass="BXDocumentationList">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="192"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <animations/>
                                 <color key="primaryBackgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <binding destination="-2" name="selectionIndexes" keyPath="documentationSelectionIndexes" previousBinding="87" id="89"/>
@@ -40,25 +40,19 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <animations/>
-                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
-                    <animations/>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="13">
                         <rect key="frame" x="-100" y="-100" width="233" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="14">
                         <rect key="frame" x="-100" y="-100" width="15" height="143"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </scroller>
                 </scrollView>
                 <textField verticalHuggingPriority="750" id="19">
                     <rect key="frame" x="17" y="231" width="446" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" lineBreakMode="truncatingMiddle" sendsActionOnEndEditing="YES" alignment="center" title="[Game name] Documentation" id="20">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
@@ -71,7 +65,6 @@
                 <textField verticalHuggingPriority="750" id="82">
                     <rect key="frame" x="17" y="7" width="446" height="14"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Add more documentation by dropping it here." id="83">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
@@ -84,15 +77,12 @@
                 <customView id="98" customClass="BXDocumentationDivider">
                     <rect key="frame" x="20" y="29" width="440" height="1"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <animations/>
                 </customView>
                 <customView id="99" customClass="BXDocumentationDivider">
                     <rect key="frame" x="20" y="222" width="440" height="1"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <animations/>
                 </customView>
             </subviews>
-            <animations/>
             <connections>
                 <outlet property="delegate" destination="-2" id="85"/>
             </connections>
@@ -109,7 +99,6 @@
                 <textField verticalHuggingPriority="750" tag="2" id="25">
                     <rect key="frame" x="13" y="16" width="134" height="32"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" truncatesLastVisibleLine="YES" sendsActionOnEndEditing="YES" alignment="center" title="[Documentation name]" id="26">
                         <font key="font" metaFont="systemBold" size="12"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -126,14 +115,12 @@
                 <imageView tag="1" id="34">
                     <rect key="frame" x="16" y="48" width="128" height="128"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="35"/>
                     <connections>
                         <binding destination="15" name="value" keyPath="icon" id="37"/>
                     </connections>
                 </imageView>
             </subviews>
-            <animations/>
             <connections>
                 <outlet property="delegate" destination="15" id="81"/>
                 <outlet property="menu" destination="39" id="43"/>
