--- a/Resources/Base.lproj/InspectorDriveItem.xib
+++ b/Resources/Base.lproj/InspectorDriveItem.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14269.14" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14269.14"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BXDriveItem">
@@ -22,7 +23,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView wantsLayer="YES" id="2" customClass="BXDriveItemView">
             <rect key="frame" x="0.0" y="0.0" width="284" height="48"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -30,7 +31,6 @@
                 <textField verticalHuggingPriority="750" tag="5" id="3" userLabel="Import Progress Description" customClass="BXThemedLabel">
                     <rect key="frame" x="51" y="8" width="93" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="100% of 999MB" id="21">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -43,12 +43,10 @@
                 <progressIndicator hidden="YES" verticalHuggingPriority="750" maxValue="1" bezeled="NO" indeterminate="YES" controlSize="small" style="bar" id="8" userLabel="Import Progress" customClass="BXThemedProgressIndicator">
                     <rect key="frame" x="141" y="9" width="114" height="12"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <animations/>
                 </progressIndicator>
                 <textField verticalHuggingPriority="750" tag="3" id="4" userLabel="Drive Type" customClass="BXThemedLabel">
                     <rect key="frame" x="51" y="8" width="216" height="14"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="[Drive type]" id="20">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -69,7 +67,6 @@
                 <button hidden="YES" toolTip="Cancel Import" tag="6" id="9" userLabel="Cancel Import">
                     <rect key="frame" x="256" y="7" width="16" height="16"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSStopProgressFreestandingTemplate" imagePosition="only" scrollable="YES" lineBreakMode="clipping" imageScaling="proportionallyDown" inset="2" id="16" customClass="BXDriveItemButtonCell">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -81,7 +78,6 @@
                 <button hidden="YES" tag="7" id="11" userLabel="Insert/Eject">
                     <rect key="frame" x="255" y="23" width="18" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="EjectFreestandingTemplate" imagePosition="only" scrollable="YES" lineBreakMode="clipping" imageScaling="proportionallyDown" inset="2" id="14" customClass="BXDriveItemButtonCell">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -95,7 +91,6 @@
                 <button hidden="YES" toolTip="Show in Finder" tag="8" id="10" userLabel="Show in Finder">
                     <rect key="frame" x="236" y="23" width="18" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSRevealFreestandingTemplate" imagePosition="only" scrollable="YES" lineBreakMode="clipping" imageScaling="proportionallyDown" inset="2" id="15" customClass="BXDriveItemButtonCell">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -107,7 +102,6 @@
                 <button hidden="YES" toolTip="Import into Gamebox" tag="9" id="6" userLabel="Import">
                     <rect key="frame" x="217" y="23" width="18" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BundleFreestandingTemplate" imagePosition="only" scrollable="YES" lineBreakMode="clipping" imageScaling="proportionallyDown" inset="2" id="18" customClass="BXDriveItemButtonCell">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -119,21 +113,19 @@
                 <imageView tag="4" id="7">
                     <rect key="frame" x="10" y="6" width="38" height="38"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <imageCell key="cell" enabled="NO" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="CDROMTemplate" id="17" customClass="BXThemedImageCell">
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="string" keyPath="themeKey" value="BXInspectorListTheme"/>
                         </userDefinedRuntimeAttributes>
                     </imageCell>
                     <connections>
-                        <binding destination="-2" name="enabled" keyPath="mounted" id="93"/>
                         <binding destination="-2" name="value" keyPath="driveImage" id="106"/>
+                        <binding destination="-2" name="enabled" keyPath="mounted" id="93"/>
                     </connections>
                 </imageView>
                 <textField verticalHuggingPriority="750" id="12" userLabel="Drive Letter">
                     <rect key="frame" x="48" y="20" width="25" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="W" id="13" customClass="BXDriveLetterCell">
                         <font key="font" metaFont="systemBold"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -143,14 +135,13 @@
                         </userDefinedRuntimeAttributes>
                     </textFieldCell>
                     <connections>
-                        <binding destination="-2" name="enabled" keyPath="mounted" id="91"/>
                         <binding destination="-2" name="value" keyPath="drive.letter" id="104"/>
+                        <binding destination="-2" name="enabled" keyPath="mounted" id="91"/>
                     </connections>
                 </textField>
                 <textField verticalHuggingPriority="750" tag="2" id="5" userLabel="Drive Name" customClass="BXThemedLabel">
                     <rect key="frame" x="72" y="24" width="140" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" lineBreakMode="truncatingHead" sendsActionOnEndEditing="YES" alignment="left" title="[Display name]" id="19">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -160,17 +151,16 @@
                         <userDefinedRuntimeAttribute type="string" keyPath="themeKey" value="BXInspectorListTheme"/>
                     </userDefinedRuntimeAttributes>
                     <connections>
-                        <binding destination="-2" name="enabled" keyPath="mounted" id="86"/>
                         <binding destination="-2" name="toolTip" keyPath="drive.sourceURL.path" id="133">
                             <dictionary key="options">
                                 <string key="NSValueTransformerName">BXDriveDisplayPath</string>
                             </dictionary>
                         </binding>
                         <binding destination="-2" name="value" keyPath="drive.title" id="71"/>
+                        <binding destination="-2" name="enabled" keyPath="mounted" id="86"/>
                     </connections>
                 </textField>
             </subviews>
-            <animations/>
             <connections>
                 <outlet property="delegate" destination="-2" id="98"/>
             </connections>
