--- a/Resources/Base.lproj/LauncherFavorite.xib
+++ b/Resources/Base.lproj/LauncherFavorite.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14269.14" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14269.14"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BXLauncherItem">
@@ -24,7 +25,6 @@
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="IMn-H7-bhd" customClass="BXThemedLabel">
                             <rect key="frame" x="128" y="19" width="494" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Program Title" id="h5A-l9-LVB">
                                 <font key="font" metaFont="systemBold" size="16"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -40,7 +40,6 @@
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="afD-Z6-pBD" customClass="BXThemedLabel">
                             <rect key="frame" x="128" y="0.0" width="494" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <textFieldCell key="cell" lineBreakMode="truncatingHead" sendsActionOnEndEditing="YES" title="C:\PATH\TO\PROGRAM.EXE" id="kin-gu-pYe">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -63,10 +62,8 @@
                             </connections>
                         </textField>
                     </subviews>
-                    <animations/>
                 </customView>
             </subviews>
-            <animations/>
             <connections>
                 <outlet property="delegate" destination="-2" id="cdP-Mv-TdP"/>
             </connections>
