--- a/Resources/Base.lproj/LauncherHeading.xib
+++ b/Resources/Base.lproj/LauncherHeading.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14269.14" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14269.14"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BXLauncherItem">
@@ -24,7 +25,6 @@
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="vPB-9b-cSm" customClass="BXThemedLabel">
                             <rect key="frame" x="128" y="12" width="455" height="19"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="HEADING TITLE" id="s4w-YF-J1z">
                                 <font key="font" metaFont="systemBold"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -40,7 +40,6 @@
                         <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="fT8-4W-nrU">
                             <rect key="frame" x="99" y="10" width="24" height="24"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="HardDiskTemplate" id="i1m-Na-c3k" customClass="BXThemedImageCell">
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="themeKey" value="BXLauncherHeadingTheme"/>
@@ -53,14 +52,11 @@
                         <imageView id="w0u-7G-bbz">
                             <rect key="frame" x="20" y="2" width="600" height="4"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <animations/>
                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="axesIndependently" image="LaunchPanelDivider" id="sFr-OM-S6z"/>
                         </imageView>
                     </subviews>
-                    <animations/>
                 </customView>
             </subviews>
-            <animations/>
             <connections>
                 <outlet property="delegate" destination="-2" id="hN5-bI-Vql"/>
             </connections>
