--- a/Resources/Base.lproj/LauncherItem.xib
+++ b/Resources/Base.lproj/LauncherItem.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14269.14" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14269.14"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BXLauncherItem">
@@ -24,7 +25,6 @@
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="uUc-Dh-FF4" customClass="BXThemedLabel">
                             <rect key="frame" x="128" y="21" width="494" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Program Title" id="G92-Yz-I6l">
                                 <font key="font" metaFont="systemBold"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -40,7 +40,6 @@
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="wWo-9F-MKV" customClass="BXThemedLabel">
                             <rect key="frame" x="128" y="2" width="494" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <textFieldCell key="cell" lineBreakMode="truncatingHead" sendsActionOnEndEditing="YES" title="C:\PATH\TO\PROGRAM.EXE" id="PAV-T6-VGS">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -65,7 +64,6 @@
                         <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="zkC-Pf-FKI">
                             <rect key="frame" x="98" y="6" width="32" height="32"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FavoriteFilledTemplate" id="UXF-Y9-cjj" customClass="BXThemedImageCell">
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="themeKey" value="BXLauncherTheme"/>
@@ -80,10 +78,8 @@
                             </connections>
                         </imageView>
                     </subviews>
-                    <animations/>
                 </customView>
             </subviews>
-            <animations/>
             <connections>
                 <outlet property="delegate" destination="-2" id="zej-UT-myI"/>
             </connections>
